--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,43 @@
-/* table{
-    border: 2px black solid;
-} */
+ table{
+    border: 2px rgb(13, 1, 36) solid;
+    border-collapse: collapse;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+} 
 
 tr:nth-child(8) td,
 tr:nth-child(9) td,
 tr:nth-child(19) td
 {
     font-weight: bold;
-    background-color:aqua;
+    background-color:#7b9ba6;
 }
 
 td:nth-child(even){
-    background-color: red;
+    background-color:#cdd6d5;
 }
 
 td:nth-child(odd){
-    background-color:green;
+    background-color:white;
+   
 }
 
 
 
 td{
     padding: 0 0 0 0px;
-    margin: 0;
+    margin: 0px;
+    border: black 1px solid ;
 }
 
 input{
     width: 50px;
-    background-color: inherit;
+    background-color: transparent;
     text-align: center;
 }
 
 th{
-    background-color: lightslategray;
+    color: white;
+    background-color: #233656;
     padding: 0 0 0 0px;
 }
 
