--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,149 @@
  body {
-     padding:0;
-     margin:0 auto;
+     padding: 0;
+     margin: 0 auto;
      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  }
 
  table {
-    margin-top: 10px;
-    margin-left: 10px;
-    border: 2px rgb(13, 1, 36) solid;
-    border-collapse: collapse;
-    animation-duration: 1s;
-    animation-name: slidein; 
-} 
+     margin-top: 10px;
+     margin-left: 10px;
+     border: 2px rgb(13, 1, 36) solid;
+     border-collapse: collapse;
+     animation-duration: 1s;
+     animation-name: slidein;
+ }
 
-tr:hover td {
-    background-color:#ffb200;
-    color: white;
-}
+ tr:hover td {
+     background-color: #ffb200;
+     color: white;
+ }
 
-tr:nth-child(8) td,
-tr:nth-child(9) td,
-tr:nth-child(19) td
-{
-    font-weight: bold;
-    background-color:#2e2e2e;
-    color:white;
-}
+ tr:nth-child(8) td, tr:nth-child(9) td, tr:nth-child(19) td {
+     font-weight: bold;
+     background-color: #2e2e2e;
+     color: white;
+ }
 
-td:nth-child(even){
-    background-color:#dfe0ab;
-}
+ td:nth-child(even) {
+     background-color: #dfe0ab;
+ }
 
-td:nth-child(odd){
-    background-color:white;
-   
-}
+ td:nth-child(odd) {
+     background-color: white;
+ }
 
-td:nth-child(1) {
-    padding-left:10px;
-    padding-right: 10px;
-}
+ td:nth-child(1) {
+     padding-left: 10px;
+     padding-right: 10px;
+ }
 
+ td, th {
+     padding-top: 5px;
+     padding-bottom: 5px;
+     margin: 0px;
+     border: black 1px solid;
+ }
 
-td, th {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin: 0px;
-    border: black 1px solid ;
-}
+ input {
+     width: 60px;
+     background-color: transparent;
+     text-align: center;
+     border-style: none;
+     color: inherit;
+ }
 
-input{
-    width: 60px;
-    background-color: transparent;
-    text-align: center;
-    border-style: none;
-    color: inherit;
-}
+ th {
+     color: #ffd64c;
+     background-color: #171717;
+ }
 
-th{
-    color: #ffd64c;
-    background-color: #171717;
-}
+ nav {
+     background-color: black;
+     margin: 0;
+     overflow: hidden;
+     display: flex;
+     justify-content: center;
+ }
 
-nav {
-    background-color: black;
-    margin:0;
-    overflow: hidden;
-    display:flex;
-    justify-content: center;
-}
+ nav div {
+     display: flex;
+ }
 
-nav div {
-    display: flex;
-}
+ .navlinks {
+     display: flex;
+     align-items: center;
+     flex-flow: row wrap;
+     justify-content: space-around;
+ }
 
-nav div span {
-    display: flex;
-    align-items: center;
-}
+ /* Mobil */
 
-@media screen and (max-width:576px) {
+ @media screen and (max-width:576px) {
+     nav div {
+         align-items: center;
+     }
+     #logo {
+         display: none;
+     }
+     nav span {
+         align-items: center;
+     }
+     .navlinks {
+         flex-flow: column wrap;
+         justify-content: center;
+         font-size: 1.5em;
+     }
+ }
 
-    nav div {
-        align-items: center;
-    }
-    nav div span {
-        flex-direction: column;
-    }
+ .topnav-left {
+     float: left;
+ }
 
-    
-}
+ .topnav-left a {
+     color: #f2f2f2;
+     text-decoration: none;
+     font-size: 1.4em;
+     text-transform: uppercase;
+     padding-left: 20px;
+     padding-right: 20px;
+ }
 
-.topnav-left {
-    float: left;
-}
+ .topnav-right {
+     float: right;
+     padding: 15px 20px;
+ }
 
-.topnav-left a {
-    color: #f2f2f2;
-    text-decoration: none;
-    font-size: 1.4em;
-    text-transform: uppercase;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+ a.active {
+     color: #ffb200;
+ }
 
-.topnav-right {
-    float:right;
-    padding: 15px 20px;
-}
+ .topnav-left a:hover {
+     background-color: #ffd64c;
+     color: black;
+ }
 
-a.active {
-    color: #ffb200;
-}
+ .container {
+     display: flex;
+     justify-content: flex-start;
+     flex-flow: row wrap;
+ }
 
-nav a:hover {
-    background-color: #ffd64c;
-    color: black;
-  }
+ .dices {
+     padding: 10px;
+     align-items: flex-start;
+     display: flex;
+     animation-duration: 1s;
+     animation-name: slidein2;
+ }
 
-  .dices {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    animation-duration: 1s;
-    animation-name: slidein2; 
-    
-  }
+ @keyframes slidein {
+     from {
+         margin-top: 70%;
+     }
+ }
 
-  @keyframes slidein{
-    from {
-        margin-top: 70%;
-    }
-}
-
-    @keyframes slidein2{
-        from {
-            margin-left: 70%;
-        }
-    }
-
+ @keyframes slidein2 {
+     from {
+         margin-left: 70%;
+     }
+ }
