Added text-align:center in navlinks

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@
      align-items: center;
      flex-flow: row wrap;
      justify-content: space-around;
+     text-align: center;
  }
 
  /* Mobil */
