--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
      border: black 1px solid;
  }
 
- input {
+ table input {
      width: 60px;
      background-color: transparent;
      text-align: center;
